--- a/homework/mini-project/backend/Dockerfile
+++ b/homework/mini-project/backend/Dockerfile
@@ -1,12 +1,12 @@
 FROM node:14
 
 # 명령을 실행할 폴더 지정
-WORKDIR /myfolder/
-COPY ./package.json /myfolder/
-COPY ./yarn.lock /myfolder/
+WORKDIR /mini-project/
+COPY ./package.json /mini-project/
+COPY ./yarn.lock /mini-project/
 RUN yarn install
 
-COPY . /myfolder/
+COPY . /mini-project/
 
 
 CMD yarn dev
