--- a/homework/mini-project/backend/package.json
+++ b/homework/mini-project/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "04-01-rest-api-with-express",
+  "name": "MINI-PROJECT-BACKEND",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
