--- a/homework/mini-project/webcrawler/package.json
+++ b/homework/mini-project/webcrawler/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "09-02-puppeteer-crawling",
+  "name": "MINI-PROJECT-CRAWLER",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
   "license": "MIT",
+  "scripts": {
+    "dev": "yarn nodemon index.js"
+  },
   "dependencies": {
     "mongoose": "^6.4.4",
+    "nodemon": "^2.0.19",
     "puppeteer": "^15.4.0"
   }
 }
