--- a/class/day16/16-01-mysql-relation/docker-compose.yaml
+++ b/class/day16/16-01-mysql-relation/docker-compose.yaml
@@ -10,7 +10,7 @@ services:
     ports:
       - 3000:3000
     env_file:
-      - ./.env
+      - ./.env.docker
 
   my-database:
     platform: linux/x86_64
