--- a/homework/day17/docker-compose.yaml
+++ b/homework/day17/docker-compose.yaml
@@ -17,6 +17,6 @@ services:
     image: mysql:latest
     environment:
       MYSQL_DATABASE: 'mydocker04'
-      MYSQL_ROOT_PASSWORD: 'root'
+      MYSQL_ROOT_PASSWORD: '1234'
     ports:
       - 3306:3306
