--- a/homework/day17/package.json
+++ b/homework/day17/package.json
@@ -23,11 +23,13 @@
   "dependencies": {
     "@nestjs/apollo": "^10.0.19",
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/graphql": "^10.0.21",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.0",
     "apollo-server-express": "^3.10.0",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "graphql": "^16.5.0",
     "mysql2": "^2.3.3",
